--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">AwareOSU</string>
     <string name="edit_message">Enter a message</string>
-    <string name="button_today">Get today\'s crimes</string>
+    <string name="button_today">Yesterday\'s Crimes</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
